; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_nau8824.c_nau8824_setup_irq.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_nau8824.c_nau8824_setup_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nau8824 = type { i32 }

@NAU8824_REG_ENA_CTRL = common dso_local global i32 0, align 4
@NAU8824_JD_SLEEP_MODE = common dso_local global i32 0, align 4
@NAU8824_REG_INTERRUPT_SETTING = common dso_local global i32 0, align 4
@NAU8824_REG_INTERRUPT_SETTING_1 = common dso_local global i32 0, align 4
@NAU8824_IRQ_EJECT_EN = common dso_local global i32 0, align 4
@NAU8824_IRQ_INSERT_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nau8824*)* @nau8824_setup_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nau8824_setup_irq(%struct.nau8824* %0) #0 {
  %2 = alloca %struct.nau8824*, align 8
  store %struct.nau8824* %0, %struct.nau8824** %2, align 8
  %3 = load %struct.nau8824*, %struct.nau8824** %2, align 8
  %4 = getelementptr inbounds %struct.nau8824, %struct.nau8824* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @NAU8824_REG_ENA_CTRL, align 4
  %7 = load i32, i32* @NAU8824_JD_SLEEP_MODE, align 4
  %8 = load i32, i32* @NAU8824_JD_SLEEP_MODE, align 4
  %9 = call i32 @regmap_update_bits(i32 %5, i32 %6, i32 %7, i32 %8)
  %10 = load %struct.nau8824*, %struct.nau8824** %2, align 8
  %11 = getelementptr inbounds %struct.nau8824, %struct.nau8824* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @NAU8824_REG_INTERRUPT_SETTING, align 4
  %14 = call i32 @regmap_update_bits(i32 %12, i32 %13, i32 1023, i32 1023)
  %15 = load %struct.nau8824*, %struct.nau8824** %2, align 8
  %16 = getelementptr inbounds %struct.nau8824, %struct.nau8824* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* @NAU8824_REG_INTERRUPT_SETTING_1, align 4
  %19 = load i32, i32* @NAU8824_IRQ_EJECT_EN, align 4
  %20 = load i32, i32* @NAU8824_IRQ_INSERT_EN, align 4
  %21 = or i32 %19, %20
  %22 = call i32 @regmap_update_bits(i32 %17, i32 %18, i32 %21, i32 0)
  ret i32 0
}

declare dso_local i32 @regmap_update_bits(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
